Re-adjust circle size for mobile

--- a/index.html
+++ b/index.html
@@ -11,22 +11,52 @@
       name="description"
       content="Schedule notice for current baby activities."
     />
+    <title>Babytime</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="data.js"></script>
     <title>Babytime by Saba</title>
   </head>
   <body>
-    <div class="flex flex-col items-center justify-center min-h-screen py-12">
-      <main class="flex flex-col items-center gap-4">
-        <div
-          class="rounded-full border w-[500px] h-[500px] flex items-center justify-center"
+    <header class="p-4 border-b-2 border-gray-100 flex items-center">
+      <div class="container flex items-center gap-4">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="w-8 h-8"
         >
-          <div class="text-center">
-            <p id="activity" class="text-4xl font-bold">...</p>
-            <p id="interval" class="text-lg text-gray-500">...</p>
-          </div>
-        </div>
-      </main>
+          <circle cx="12" cy="12" r="10"></circle>
+          <polyline points="12 6 12 12 16 14"></polyline>
+        </svg>
+        <h1 class="text-2xl font-bold">Baby Time</h1>
+      </div>
+    </header>
+    <div
+      class="flex flex-col h-screen p-4 gap-4 md:gap-8 items-center justify-center text-center"
+    >
+      <div class="space-y-1 pt-32">
+        <p
+          id="interval"
+          class="text-4xl font-semibold tracking-tighter sm:text-6xl"
+        >
+          ...
+        </p>
+        <p class="text-sm tracking-wide font-medium uppercase letter-spacing-2">
+          Current Time
+        </p>
+      </div>
+      <div class="flex-1 flex flex-col pt-32 gap-4">
+        <p id="activity" class="text-2xl font-semibold tracking-tighter">...</p>
+        <p class="text-sm tracking-wide font-medium uppercase letter-spacing-2">
+          Suggested Activity
+        </p>
+      </div>
     </div>
 
     <script type="text/javascript">
